addSession working on localhost
