# controllers/sessionsController.js
@@ -17,9 +17,34 @@ const getSessions = async (req, res) => {
   }
 };
 
+/************************************************************************
+ *  ADD USER PROFILE - HTTP:POST
+ *************************************************************************/
+const addSession = async (req, res) => {
+  // #swagger.tags = ['Sessions']
+  //#swagger.security = [{"OAuth2": ['read', 'write']}]
+
+  try {
+    const { sessionID, tutorID, learnerID, skillID, sessionTime, teamsMeetingLink } = req.body;
+    const session = new Session({
+      sessionID,
+      tutorID,
+      learnerID,
+      skillID,
+      sessionTime,
+      teamsMeetingLink
+    });
+
+    const insertedSession = await session.save();
+    res.status(201).json(insertedSession._id);
+  } catch (error) {
+    res.status(500).json({ error: error.message });
+  }
+};
+
 module.exports = {
-  getSessions
-  //addSession,
+  getSessions,
+  addSession
   //getSessionById,
   //updateSession,
   //deleteSession,
